--- a/css/cart.css
+++ b/css/cart.css
@@ -23,22 +23,42 @@
 }
 
 .radio{
-  background:red;
+  /* background:red; */
   width: 15px;
   height: 15px;
   border-radius: 50%;
   border: 2px solid #c4c4c4;
-  margin: 30px auto;
+  margin: 52px auto;
 }
+
+.radio div{
+  background: red;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
 img{
   margin: 0;
-
 } 
 
 .input-group{
   margin: 43px auto;
 }
 
+.del:hover{
+  cursor: pointer;
+}
+
+#tfoot div{
+  line-height: 120px;
+}
+
+#go{
+  margin-top: 37px; 
+}
+
+/* 去掉input number框丑丑的上下箭头 */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -47,26 +67,4 @@ input::-webkit-inner-spin-button {
 input[type="number"]{
     -moz-appearance: textfield;
 }
-/*
-.cart>div:nth-child(2) {
-  width: 60px;
-  height: 80px;
-  background: pink;
-  margin-left: 25px;
-  margin-right: 25px;
-}
-.cart>div:nth-child(3) {
-  margin-top: 30px;
-}
-.yy {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  border: 1px solid #c4c4c4;
-  margin-top: 30px;
-  display: inline-block;
-  margin-right: 10px;
-}
-.active {
-  background: red;
-} */
+
